// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccessSettings /> should handle generating certificate 1`] = `
<div>
  <h1>
    Access Settings
  </h1>
  <p>
    Here you can set up your router to be configured remotely. The remote configuration is done via secure encrypted connection and each client is required to have a token issued by this device.
  </p>
  <p>
    This can be useful when you plan to access configuration interface another Turris router or you intend to write your own client.
  </p>
  <h3>
    Generating certificate authority
  </h3>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
  <p>
    Your certificate authority is now being generated. It usually takes a few minutes. Settings will appear here automatically once the authority is ready.
  </p>
</div>
`;

exports[`<AccessSettings /> should handle missing certificate 1`] = `
<div>
  <h1>
    Access Settings
  </h1>
  <p>
    Here you can set up your router to be configured remotely. The remote configuration is done via secure encrypted connection and each client is required to have a token issued by this device.
  </p>
  <p>
    This can be useful when you plan to access configuration interface another Turris router or you intend to write your own client.
  </p>
  <h3>
    No certificate authority
  </h3>
  <p>
    Currently there is no certificate authority (CA) dedicated to remote access. A CA is required to generate access tokens to authenticate. To proceed you need to generate it first.
  </p>
  <button
    class="btn btn-primary  col-sm-12 col-lg-3"
    type="button"
  >
     
     
    Generate certificate authority
  </button>
</div>
`;

exports[`<AccessSettings /> should handle ready certificate 1`] = `
<div>
  <h1>
    Access Settings
  </h1>
  <p>
    Here you can set up your router to be configured remotely. The remote configuration is done via secure encrypted connection and each client is required to have a token issued by this device.
  </p>
  <p>
    This can be useful when you plan to access configuration interface another Turris router or you intend to write your own client.
  </p>
  <h3>
    Remote Access
  </h3>
  <form>
    <div
      class="form-group"
    >
      <div
        class="custom-control custom-checkbox "
      >
        <input
          class="custom-control-input"
          id="1"
          type="checkbox"
        />
        <label
          class="custom-control-label"
          for="1"
        >
          Enable remote access
        </label>
      </div>
    </div>
    <button
      class="btn btn-primary  col-sm-12 col-lg-3"
      type="submit"
    >
       
       
      Save
    </button>
  </form>
  <h3>
    Certificate Authority
  </h3>
  <p>
    Your certificate authority is set up properly. Please note that if you delete it all clients will have their access revoked.
  </p>
  <button
    class="btn btn-primary  col-sm-12 col-lg-3"
    type="button"
  >
     
     
    Delete certificate authority
  </button>
</div>
`;

exports[`<AccessSettings /> should render error 1`] = `
<div>
  <h1>
    Access Settings
  </h1>
  <p>
    Here you can set up your router to be configured remotely. The remote configuration is done via secure encrypted connection and each client is required to have a token issued by this device.
  </p>
  <p>
    This can be useful when you plan to access configuration interface another Turris router or you intend to write your own client.
  </p>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;

exports[`<AccessSettings /> should render spinner 1`] = `
<div>
  <h1>
    Access Settings
  </h1>
  <p>
    Here you can set up your router to be configured remotely. The remote configuration is done via secure encrypted connection and each client is required to have a token issued by this device.
  </p>
  <p>
    This can be useful when you plan to access configuration interface another Turris router or you intend to write your own client.
  </p>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;
